--- a/sample-s3-bucket.yaml
+++ b/sample-s3-bucket.yaml
@@ -15,7 +15,7 @@ Parameters:
     Default: 'dev'
   OwnerValue:
     Type: String
-    Default: 'anton'
+    Default: # enter name
   S3Versioning:
     Type: String
     Default: 'Enabled'
